feat: Enhance comment handling in PostItem component with duplicate prevention and unique key generation

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "ts-node --project tsconfig.server.json --transpile-only server.ts",
     "build": "next build",
     "start": "NODE_ENV=production ts-node --project tsconfig.server.json --transpile-only server.ts",
-    "lint": "eslint"
+    "lint": "eslint",
+    "db:separate": "node scripts/separate-collections.js"
   },
   "dependencies": {
     "@google/genai": "^1.29.0",
