--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@types/prettier": "^2.7.3",
     "@types/qrcode": "^1.5.6",
     "axios": "^1.13.1",
     "bcryptjs": "^3.0.3",
@@ -43,6 +44,7 @@
     "next-auth": "^4.24.13",
     "openai": "^4.104.0",
     "otplib": "^12.0.1",
+    "prettier": "^3.7.4",
     "qrcode": "^1.5.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
