--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@types/node": "^20",
     "@types/prettier": "^2.7.3",
     "@types/qrcode": "^1.5.6",
     "axios": "^1.13.1",
@@ -52,17 +53,15 @@
     "react-hot-toast": "^2.6.0",
     "react-intersection-observer": "^10.0.0",
     "react-player": "^3.4.0",
-    "react-share": "^5.2.2",
     "simple-peer": "^9.11.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.4.0",
-    "twilio": "^5.10.7",
-    "zod": "^4.1.12",
-    "zustand": "^5.0.8",
-    "@types/node": "^20",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "twilio": "^5.10.7",
+    "typescript": "^5.9.3",
+    "zod": "^4.1.12",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
