chore: Remove obsolete files and improve sound settings in the settings page
- Deleted unused debug log, deployment guides, and license files to clean up the repository.
- Enhanced sound settings functionality in the settings page, allowing users to upload custom ringtones and manage notification tones.
- Implemented audio playback for incoming and outgoing calls using generated tones based on user preferences.

--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "ts-node --project tsconfig.server.json --transpile-only server.ts",
-    "build": "next build",
-    "start": "NODE_ENV=production ts-node --project tsconfig.server.json --transpile-only server.ts",
-    "lint": "eslint",
-    "db:separate": "node scripts/separate-collections.js"
+    "build": "next build && tsc --project tsconfig.server.json",
+    "start": "NODE_ENV=production node dist/server.js",
+    "lint": "next lint"
   },
   "dependencies": {
     "@google/genai": "^1.29.0",
