--- a/.dockerignore
+++ b/.dockerignore
@@ -1,53 +1,55 @@
 # Dependencies
 node_modules
-npm-debug.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Build outputs
+# Next.js build output
 .next
 out
-build
+
+# Production builds
 dist
+build
 
-# Git
-.git
-.gitignore
+# Environment variables
+.env*
+!.env.example
 
-# IDE
+# IDE files
 .vscode
 .idea
 *.swp
 *.swo
 
-# Environment files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# OS files
+.DS_Store
+Thumbs.db
+
+# Git
+.git
+.gitignore
 
 # Docker
 Dockerfile*
 docker-compose*
 .dockerignore
 
+# Railway
+railway.json
+
 # Documentation
+README.md
 *.md
-docs
 
-# Tests
-__tests__
-*.test.ts
-*.test.tsx
-*.spec.ts
-*.spec.tsx
+# Testing
 coverage
+.nyc_output
 
-# Debug
-debug.log
-eslint_report.json
+# Logs
+logs
+*.log
 
-# Misc
-.DS_Store
-*.pem
-
-
+# Temporary files
+.tmp
+temp/
