--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "devconnect",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.9.0"
+  },
   "scripts": {
     "dev": "ts-node --project tsconfig.server.json --transpile-only server.ts",
     "build": "next build && tsc --project tsconfig.server.json",
