--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "cookie-parser": "^1.4.7",
+    "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "emoji-picker-react": "^4.16.1",
@@ -59,12 +60,10 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.4.0",
-    "cross-env": "^7.0.3",
     "ts-node": "^10.9.2",
     "twilio": "^5.10.7",
     "typescript": "^5.9.3",
-    "zod": "^4.1.12",
-    "zustand": "^5.0.8"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
