--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "express": "^5.1.0",
     "framer-motion": "^12.23.26",
     "jsonwebtoken": "^9.0.2",
+    "jsqr": "^1.4.0",
     "lucide-react": "^0.552.0",
     "mongodb": "^5.9.2",
     "next": "16.0.10",
